[package]
name = "pump-clone"
version = "0.1.0"
description = "Solana meme token launchpad with bonding curves and fair launches"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump_clone"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3.0", features = ["no-entrypoint"] }
spl-token-metadata = "0.1.0"
mpl-token-metadata = "4.1.2"
solana-program = "1.17.0"
borsh = "0.10.3"
arrayref = "0.3.7"
num-derive = "0.4.0"
num-traits = "0.2.17"
thiserror = "1.0.50"
switchboard-v2 = "0.4.0"
pyth-solana-receiver-sdk = "0.2.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = { version = "1.35.0", features = ["full"] }
anchor-client = "0.29.0"